[gd_scene load_steps=31 format=3 uid="uid://brgo0jichi0f3"]

[ext_resource type="PackedScene" uid="uid://c1f6p6wgam2ir" path="res://Prefabs/Ingredient.tscn" id="1_nll84"]
[ext_resource type="PackedScene" uid="uid://dnpwuarnje8f4" path="res://Prefabs/Player.tscn" id="1_uw7ri"]
[ext_resource type="Script" path="res://Scripts/Components/PotionGenerationPipeline.gd" id="2_lyqdw"]
[ext_resource type="Resource" uid="uid://bxv5kv8ly5la5" path="res://Resources/MushroomResource.tres" id="3_5rcix"]
[ext_resource type="PackedScene" uid="uid://b5wgymxtoegyv" path="res://Prefabs/PotionGenerationPipeline/InventoryExtractor.tscn" id="3_e2nb4"]
[ext_resource type="PackedScene" uid="uid://bt05c5urgs1ca" path="res://Prefabs/PotionGenerationPipeline/RandomSelector.tscn" id="4_dg4x4"]
[ext_resource type="PackedScene" uid="uid://bc0aeeb5cj5ei" path="res://Prefabs/PotionGenerationPipeline/Subtractor.tscn" id="5_40o3a"]
[ext_resource type="FontFile" uid="uid://cutaxq6g3wp0b" path="res://Assets/Fonts/MonoSpaceMicroFont.png" id="6_iq147"]
[ext_resource type="PackedScene" uid="uid://dru6iisxs5fu1" path="res://Prefabs/PotionGenerationPipeline/PotionCreator.tscn" id="6_k8wag"]
[ext_resource type="Script" path="res://Scripts/Components/EnemyBehavior.gd" id="7_aslfw"]
[ext_resource type="Script" path="res://Scripts/DataContainers/PotionData.gd" id="8_33twk"]
[ext_resource type="Script" path="res://Scripts/Components/TargetChecker.gd" id="8_hrs4x"]
[ext_resource type="Script" path="res://Scripts/DataContainers/HealthData.gd" id="8_msk3r"]
[ext_resource type="Script" path="res://Scripts/Components/AttackManager.gd" id="8_wrfba"]
[ext_resource type="PackedScene" uid="uid://df3h7qev1b10s" path="res://Prefabs/Projectile.tscn" id="9_yf2lg"]
[ext_resource type="Script" path="res://Scripts/Components/HealthManager.gd" id="11_gl1ft"]
[ext_resource type="Texture2D" uid="uid://bluu31wvkf88l" path="res://Assets/Characters/ThornedVioletSlime.png" id="12_mi0ji"]
[ext_resource type="PackedScene" uid="uid://cgvc4m4s8kl3e" path="res://Prefabs/Potion.tscn" id="13_joau8"]
[ext_resource type="Script" path="res://Scripts/DataContainers/DamageData.gd" id="14_dh0jn"]
[ext_resource type="Script" path="res://Scripts/DataContainers/ProjectileData.gd" id="15_0a5sb"]
[ext_resource type="Texture2D" uid="uid://iqq5agn1ns1d" path="res://Assets/Items/Item_Potion_Violet.png" id="16_b3534"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rqhpy"]
radius = 12.0

[sub_resource type="Resource" id="Resource_wjxl1"]
script = ExtResource("8_msk3r")
max_health_points = 3
health_points = 3

[sub_resource type="Resource" id="Resource_jimux"]
script = ExtResource("8_33twk")
max_uses = 10
uses = 10
usage_delay = 1.0
name = "ITEM NAME"
description = "ITEM DESCRIPTION"
gold_value = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltvhh"]
size = Vector2(20, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hv3hc"]
size = Vector2(22, 18)

[sub_resource type="CircleShape2D" id="CircleShape2D_1bstd"]
radius = 1.0

[sub_resource type="Resource" id="Resource_16npd"]
script = ExtResource("14_dh0jn")
contact_damage = 1

[sub_resource type="Resource" id="Resource_i6ypg"]
script = ExtResource("15_0a5sb")
damage = SubResource("Resource_16npd")
speed = 100.0
destroy_on_contact = true

[sub_resource type="Resource" id="Resource_xn05u"]
script = ExtResource("8_33twk")
max_uses = 25
uses = 25
usage_delay = 0.5
projectile_data = SubResource("Resource_i6ypg")
name = "TEST ITEM NAME"
description = "TEST ITEM DESCRIPTION"
texture = ExtResource("16_b3534")
gold_value = 0

[node name="MainScene" type="Node2D"]

[node name="Entities" type="Node2D" parent="."]

[node name="Player" parent="Entities" groups=["Player"] instance=ExtResource("1_uw7ri")]
position = Vector2(104, 176)

[node name="PotionGenerationPipeline" type="Node2D" parent="Entities"]
position = Vector2(96, 104)
script = ExtResource("2_lyqdw")
essence_modifier_prefabs = Array[PackedScene]([ExtResource("3_e2nb4"), ExtResource("4_dg4x4"), ExtResource("5_40o3a"), ExtResource("6_k8wag")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entities/PotionGenerationPipeline"]
shape = SubResource("CircleShape2D_rqhpy")
debug_color = Color(0, 0.65098, 0.168627, 0.419608)

[node name="TinyDevil" type="Area2D" parent="Entities" groups=["Enemy"]]
position = Vector2(248, 256)

[node name="EnemyBehavior" type="Node" parent="Entities/TinyDevil" node_paths=PackedStringArray("attack_manager", "health_manager")]
script = ExtResource("7_aslfw")
health_data = SubResource("Resource_wjxl1")
attack_manager = NodePath("../AttackManager")
health_manager = NodePath("../HealthManager")
potion = SubResource("Resource_jimux")

[node name="AttackManager" type="Node" parent="Entities/TinyDevil"]
script = ExtResource("8_wrfba")
projectile_prefab = ExtResource("9_yf2lg")

[node name="CollisionBox" type="CollisionShape2D" parent="Entities/TinyDevil"]
shape = SubResource("RectangleShape2D_ltvhh")

[node name="HealthManager" type="Area2D" parent="Entities/TinyDevil"]
collision_layer = 2
collision_mask = 4
script = ExtResource("11_gl1ft")

[node name="Hurtbox" type="CollisionShape2D" parent="Entities/TinyDevil/HealthManager"]
shape = SubResource("RectangleShape2D_hv3hc")
debug_color = Color(0.921569, 0, 0.254902, 0.227451)

[node name="TargetChecker" type="Area2D" parent="Entities/TinyDevil" node_paths=PackedStringArray("influence_box")]
collision_layer = 8
collision_mask = 9
script = ExtResource("8_hrs4x")
influence_box = NodePath("InfluenceBox")

[node name="InfluenceBox" type="CollisionShape2D" parent="Entities/TinyDevil/TargetChecker"]
shape = SubResource("CircleShape2D_1bstd")
debug_color = Color(0.933333, 0, 0.639216, 0.105882)

[node name="Sprite" type="Sprite2D" parent="Entities/TinyDevil"]
texture_filter = 1
texture = ExtResource("12_mi0ji")

[node name="Items" type="Node2D" parent="."]

[node name="Potion" parent="Items" instance=ExtResource("13_joau8")]
position = Vector2(64, 160)
item_data = SubResource("Resource_xn05u")

[node name="Ingredient" parent="Items" instance=ExtResource("1_nll84")]
position = Vector2(76, 190)
item_data = ExtResource("3_5rcix")

[node name="Ingredient2" parent="Items" instance=ExtResource("1_nll84")]
position = Vector2(143, 177)
item_data = ExtResource("3_5rcix")

[node name="Ingredient3" parent="Items" instance=ExtResource("1_nll84")]
position = Vector2(112, 200)
item_data = ExtResource("3_5rcix")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerUI" type="Label" parent="UI"]
texture_filter = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 333.0
offset_right = 104.0
offset_bottom = 356.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("6_iq147")
text = "HP: X/X"
vertical_alignment = 2

[connection signal="area_entered" from="Entities/TinyDevil/TargetChecker" to="Entities/TinyDevil/TargetChecker" method="_on_area_entered"]
[connection signal="area_exited" from="Entities/TinyDevil/TargetChecker" to="Entities/TinyDevil/TargetChecker" method="_on_area_exited"]
[connection signal="target_changed" from="Entities/TinyDevil/TargetChecker" to="Entities/TinyDevil/EnemyBehavior" method="_on_target_checker_target_changed"]
